Update 1.0
- Updated repositories